Devops-Notes/Kuberntes-data/Kubernets-Sample-Projects/Deployment Along volumes,Ingress,Engress,Networking/Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: javawebappdeployment
spec:
  replicas: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: javawebapp
  template:
    metadata:
      name: javawebapppod
      labels:
        app: javawebapp
    spec:
      containers:
      - name: my-container
        image: ashokit/javawebapp
        ports:
        - containerPort: 8080
        volumeMounts:
            - name: my-pvc-volume
              mountPath: /path/in/container
      volumes:
        - name: my-pvc-volume
          persistentVolumeClaim:
            claimName: my-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: my-app-service
spec:
  selector:
    app: javawebapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: my-nginx-network-policy
  namespace: other
spec:
  podSelector:
    matchLabels:
      app: javawebapp
  policyTypes:
    - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            team: operation
      - podSelector:
          matchLabels:
            role: my-tomcat
  egress:
  - to:
    - podSelector:
        matchLabels:
          role: my-nginx  # From above my-nginx pod only you can expose or send request my-tomcat pod data
    ports:
    - protocol: TCP
      port: 80
